@@ -1,16 +1,6 @@
 package kr.gooroom.gpms.notice.service.impl;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
-
-import javax.annotation.Resource;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.stereotype.Service;
-
+import jakarta.annotation.Resource;
 import kr.gooroom.gpms.client.service.ClientGroupVO;
 import kr.gooroom.gpms.client.service.impl.ClientGroupDAO;
 import kr.gooroom.gpms.common.GPMSConstants;
@@ -22,6 +12,13 @@ import kr.gooroom.gpms.dept.service.DeptVO;
 import kr.gooroom.gpms.dept.service.impl.DeptDAO;
 import kr.gooroom.gpms.notice.service.NoticePublishTargetService;
 import kr.gooroom.gpms.notice.service.NoticePublishTargetVO;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.stereotype.Service;
+
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
 
 @Service("noticePublishTargetService")
 public class NoticePublishTargetServiceImpl implements NoticePublishTargetService {
@@ -38,7 +35,7 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
     private DeptDAO deptDao;
 
     @Override
-    public StatusVO createNoticePublishTarget(String noticePublishId, List<String> grpInfos, List<String> clientIds, List<String> deptInfos, List<String> userIds) throws Exception {
+    public StatusVO createNoticePublishTarget(String noticePublishId, List<String> grpInfos, List<String> clientIds, List<String> deptInfos, List<String> userIds) {
         
         List<NoticePublishTargetVO> noticePublishTargetVOs = new ArrayList<>();
        
@@ -52,8 +49,7 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
                 if (clientGroupVOs != null && clientGroupVOs.size() > 0) {
                     List<NoticePublishTargetVO> noticePublishTargetVOsForGrp = clientGroupVOs.stream()
                             .filter(clientGroupVO -> !clientGroupVO.getGrpId().equals(tmpArr[0]))
-                            .map(clientGroupVO -> getNoticePublishTargetVO(noticePublishId, "3", clientGroupVO.getGrpId(), null, "0"))
-                            .collect(Collectors.toList());
+                            .map(clientGroupVO -> getNoticePublishTargetVO(noticePublishId, "3", clientGroupVO.getGrpId(), null, "0")).toList();
                     noticePublishTargetVOs.addAll(noticePublishTargetVOsForGrp);
                 }
 
@@ -73,8 +69,7 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
             if (deptVOs != null && deptVOs.size() > 0) {
                 List<NoticePublishTargetVO> noticePublishTargetVOsForDept = deptVOs.stream()
                         .filter(deptVO -> !deptVO.getDeptCd().equals(tmpArr[0]))
-                        .map(deptVO -> getNoticePublishTargetVO(noticePublishId, "1", deptVO.getDeptCd(), null, "0"))
-                        .collect(Collectors.toList());
+                        .map(deptVO -> getNoticePublishTargetVO(noticePublishId, "1", deptVO.getDeptCd(), null, "0")).toList();
                 noticePublishTargetVOs.addAll(noticePublishTargetVOsForDept);
             }
         }
@@ -98,13 +93,13 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
     }
     
     @Override
-    public ResultVO getNoticePublishTargetList(Map<String, Object> options) throws Exception {
+    public ResultVO getNoticePublishTargetList(Map<String, Object> options) {
         ResultVO resultVO = new ResultVO();
         try {
             List<NoticePublishTargetVO> re = noticePublishTargetDAO.selectNoticePublishTargetList(options);
 
             if (re != null && re.size() > 0) {
-                resultVO.setData(re.stream().toArray(NoticePublishTargetVO[]::new));
+                resultVO.setData(re.toArray(NoticePublishTargetVO[]::new));
                 resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
                         MessageSourceHelper.getMessage("system.common.selectdata")));
             } else {
@@ -115,17 +110,15 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
         } catch (Exception ex) {
             logger.error("error in getNoticePublishList : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
                     MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-            if (resultVO != null) {
-                resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-                        MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-            }
+            resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+                    MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
         }
         
         return resultVO;
     }
 
     @Override
-    public ResultPagingVO getNoticePublishTargetListPaged(Map<String, Object> options) throws Exception {
+    public ResultPagingVO getNoticePublishTargetListPaged(Map<String, Object> options) {
         ResultPagingVO resultVO = new ResultPagingVO();
         try {
             List<NoticePublishTargetVO> re = noticePublishTargetDAO.selectNoticePublishTargetListPaged(options);
@@ -133,7 +126,7 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
             long filteredCount = noticePublishTargetDAO.selectNoticePublishTargetListFilteredCount(options);
 
             if (re != null && re.size() > 0) {
-                resultVO.setData(re.stream().toArray(NoticePublishTargetVO[]::new));
+                resultVO.setData(re.toArray(NoticePublishTargetVO[]::new));
                 resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
                         MessageSourceHelper.getMessage("system.common.selectdata")));
 
@@ -147,10 +140,8 @@ public class NoticePublishTargetServiceImpl implements NoticePublishTargetServic
         } catch (Exception ex) {
             logger.error("error in getNoticePublishList : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
                     MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-            if (resultVO != null) {
-                resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-                        MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-            }
+            resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+                    MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
         }
         
         return resultVO;
